# facerec

./: .cursorignore  .gitignore  Alembic.md  README.md  alembic.ini  build_graph.py  communty_analysis.py  detect_faces.py  discover_dir.py  dump-embeddings.py  evaluate_faceid.py  explore_clusters.py  explore_graph.py  extract_faces.py  images.py  models.py  project.md  pyproject.toml  streamlit_face_detector.py  test_try_clustering.py  try.py  try_clustering.py  visualize_clusters.py
.cursor/rules/: git-commit-format.mdc
alembic/: env.py
alembic/versions/: 1056ab87e782_add_new_fields.py  205a71686b1c_update_models.py  f00f67facc19_add_face_json_column.py
facerec/: cluster_faces.py  detect_faces.py  discover_dir.py  facerec.py  images.py  models.py
facerec/graphwalk/backend/: main.py
facerec/graphwalk/frontend/: package-lock.json
facerec/graphwalk/frontend/src/: App.tsx
facerec/graphwalk/frontend/src/api/: facces.ts  faces.ts
facerec/graphwalk/frontend/src/components/: Face.tsx  FaceGrid.tsx  ImageContext.tsx  Layout.tsx  PersonCard.tsx  PersonSearchDropdown.tsx  PersonSearchOrAdd.tsx  TimelineFace.tsx
facerec/graphwalk/frontend/src/utils/: dates.ts
facerec/graphwalk/frontend/src/views/: CompareView.tsx  ComponentView.tsx  ExploreView.tsx  HomeView.tsx  PeopleView.tsx  TimelineView.tsx
graphwalk/backend/: backend.md  main.py
graphwalk/frontend/: frontend.md  package.json  tailwind.config.js
graphwalk/frontend/src/: index.css  main.tsx
graphwalk/frontend/src/components/: FaceGrid.tsx  PersonSearchDropdown.tsx  PersonSearchOrAdd.tsx
graphwalk/frontend/src/views/: CompareView.tsx  ComponentView.tsx  ExploreView.tsx  PeopleView.tsx
